# file-ingestor

./: LICENSE  README.md  pyproject.toml
file_ingestor/: base_loader.py  csv_loader.py  excel_loader.py  json_loader.py  logger.py
files/: student_name.csv  student_name.json  student_name.xlsx
