[tool.poetry]
name = "file-ingestor"
version = "0.1.0"
description = "Package to ingest file data into database"
authors = ["nbljain <nitinbljain@outlook.com>"]
readme = "README.md"
packages = [{include="file_ingestor"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
fastapi = "^0.120.4"
pydantic = "^2.12.3"
openpyxl = "^3.1.5"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
